--- a/Products.MicroService.API/appsettings.json
+++ b/Products.MicroService.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=$MYSQL_HOST;Port=3306;Database=ecommerceproductsdatabase;Username=root;Password=$MYSQL_PASSWORD"
+    //"DefaultConnection": "Host=$MYSQL_HOST;Port=3306;Database=ecommerceproductsdatabase;Username=root;Password=$MYSQL_PASSWORD"
+    "DefaultConnection": "Host=$MYSQL_HOST;Port=$MYSQL_PORT;Database=$MYSQL_DB;Username=$MYSQL_USER;Password=$MYSQL_PASSWORD"
   },
   "Logging": {
     "LogLevel": {
