--- a/Products.MicroService.API/Properties/launchSettings.json
+++ b/Products.MicroService.API/Properties/launchSettings.json
@@ -4,7 +4,12 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MYSQL_HOST":"localhost",
+        "MYSQL_PASSWORD":"admin",
+        "MYSQL_PORT":"3306",
+        "MYSQL_DB":"ecommerceproductsdatabase",
+        "MYSQL_USER":"root"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5083"
@@ -24,7 +29,7 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "ASPNETCORE_HTTP_PORTS": "8081"
       },
       "publishAllPorts": true,
       "useSSL": true
